# Operating-Systems

./: .gitignore  README.md
LAB1/JuraszWiktor/cw01/zad1/: CMakeLists.txt  list.c
LAB1/JuraszWiktor/cw01/zad2/: CMakeLists.txt
LAB10/zad1/: client.c  makefile  makefile~  server  server.c
LAB10/zad1a/: client.c  common.h  server.c  server.c~
LAB10/zad2/: client  client.c  common.h  common.h~  main  main.c  main.c~  makefile
LAB2/JuraszWiktor/cw02/: CMakeLists.txt
LAB2/JuraszWiktor/cw02/zad1/: records_generator.c  records_sorter.c  statystyki~
LAB2/JuraszWiktor/cw02/zad2/: path_reader.c  path_reader_ftw.c
LAB2/JuraszWiktor/cw02/zad3/: locker.c
LAB3/JuraszWiktor/cw03/zad1/: processes_test.c
LAB3/JuraszWiktor/cw03/zad2/: file_counter.c
LAB4/JuraszWiktor/cw04/zad1/: signal_receiver.c  signal_sender.c
LAB4/JuraszWiktor/cw04/zad2/: signal_receiver.c  signal_sender.c
LAB4/JuraszWiktor/cw04/zad3/: signal_receiver.c  signal_sender.c
LAB5/JuraszWiktor/cw05/zad1/: dir_counter.c
LAB5/JuraszWiktor/cw05/zad2/: rdfifo.c  wrfifo.c
LAB5/JuraszWiktor/cw05/zad3/: dir_desc.c
LAB6/JuraszWiktor/cw06/zad1/: chat.h  client.c  makefile  server.c
LAB6/JuraszWiktor/cw06/zad2/: client.c  server.c
LAB6/JuraszWiktor/cw06/zad2a/: client.c  makefile  server.c
LAB7/JuraszWiktor/cw07/zad1/: makefile  producer_or_consumer.c
LAB7/JuraszWiktor/cw07/zad2/: makefile  producer_or_consumer.c
LAB8/JuraszWiktor/cw08/zad1a/: makefile  makefile~  record_counter.c  records_generator.c
LAB8/JuraszWiktor/cw08/zad1b/: record_counter.c
LAB8/JuraszWiktor/cw08/zad2a/: record_counter.c  records_generator2.c
LAB8/JuraszWiktor/cw08/zad2b/: makefile  record_counter.c
LAB9/JuraszWiktor/cw09/zad1/: makefile  philosophers  philosophers.c
LAB9/JuraszWiktor/cw09/zad2/: makefile  readers_writers.c  readers_writers.c~
Projekt/: CMakeLists.txt  drawer.c  drawer.h  philosophers_mutex.c
Projekt/philosophers_mutex/: CMakeLists.txt  philosophers.c
Projekt/philosophers_semaphores/: CMakeLists.txt  philosophers.c
Projekt/readers_writers_mutexes/: CMakeLists.txt  readers_writers.c
Projekt/readers_writers_semaphores/: CMakeLists.txt  readers_writers.c
Projekt/sleeping_barber_problem/: CMakeLists.txt  barber.c
