cmake_minimum_required(VERSION 2.8)
project(Projekt)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -fpic -g")
set(SOURCE_FILES philosophers_mutex.c)
add_library(drawer drawer.c drawer.h)
target_link_libraries(drawer ncurses m)
add_executable(Projekt ${SOURCE_FILES})
target_link_libraries(Projekt drawer)
add_subdirectory(philosophers_mutex)
add_subdirectory(readers_writers_semaphores)
add_subdirectory(readers_writers_mutexes)
add_subdirectory(philosophers_semaphores)
add_subdirectory(sleeping_barber_problem)
